--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
 	background-color: #fff;
 	height: 100%;
 	scroll-behavior: smooth;
-	scroll-snap-type: y mandatory;
+	scroll-snap-type: y proximity;
 /*	background-image: url(About.png);
 	background-repeat: no-repeat;
 	background-size: auto;*/
@@ -300,7 +300,7 @@ ol {
 .sep {
 	padding-top: 30%;
 	padding-bottom: 22%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .sep.last {
